public/css/reader.css
/* ... */
/* Indicate that 'label' will shift focus to the associated form element */
label { cursor: pointer; }

/* 
 * 1. Correct color not inheriting in IE6/7/8/9 
 * 2. Correct alignment displayed oddly in IE6/7 
 */

legend { border: 0; *margin-left: -7px; padding: 0; }

/*
 * 1. Correct font-size not inheriting in all browsers
 * 2. Remove margins in FF3/4 S5 Chrome
 * 3. Define consistent vertical alignment display in all browsers
 */

button, input, select, textarea { font-size: 100%; margin: 0; vertical-align: baseline; *vertical-align: middle; }

/*
 * 1. Define line-height as normal to match FF3/4 (set using !important in the UA stylesheet)
 * 2. Correct inner spacing displayed oddly in IE6/7
 */

button, input { line-height: normal; *overflow: visible; }

/*
 * Reintroduce inner spacing in 'table' to avoid overlap and whitespace issues in IE6/7
 */

table button, table input { *overflow: auto; }

/*
 * 1. Display hand cursor for clickable form elements
 * 2. Allow styling of clickable form elements in iOS
 */

button, input[type="button"], input[type="reset"], input[type="submit"] { cursor: pointer; -webkit-appearance: button; }

/*
 * Consistent box sizing and appearance
 */

input[type="checkbox"], input[type="radio"] { box-sizing: border-box; }
input[type="search"] { -webkit-appearance: textfield; -moz-box-sizing: content-box; -webkit-box-sizing: content-box; box-sizing: content-box; }
input[type="search"]::-webkit-search-decoration { -webkit-appearance: none; }

/* 
 * Remove inner padding and border in FF3/4: h5bp.com/l 
 */

button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }

/* 
 * 1. Remove default vertical scrollbar in IE6/7/8/9 
 * 2. Allow only vertical resizing
 */

textarea { overflow: auto; vertical-align: top; resize: vertical; }

/* Colors for form validity */
input:valid, textarea:valid {  }
input:invalid, textarea:invalid { background-color: #f0dddd; }


/* =============================================================================
   Tables
   ========================================================================== */

table { border-collapse: collapse; border-spacing: 0; }
td { vertical-align: top; }


/* ==|== primary styles =====================================================
   Author: 
   ========================================================================== */


a, a:visited { color: #54310E !important; text-decoration: none !important; }
a:hover { color: #335C11 !important; }

header { background: black; position: fixed; top: 0; left: 0; width: 100%; height: 40px; }

.toolbar ul {list-style-type: none; margin: 0; padding: 0;}

.toolbar-icon {
    float: left;
    background: black url('../img/toolbar-icons.png') no-repeat;
    zoom: 1;
    border: 0;
    width: 32px;
    height: 32px;
    margin: 4px;
    text-indent: -9999px;
}

.toolbar #back { background-position: 0px 0px; }
.toolbar #forward { background-position: -32px 0px; }
.toolbar #home { background-position: -64px 0px; }
.toolbar #fontup { background-position: -96px 0px; }
.toolbar #fontdown { background-position: -128px 0px; }
.toolbar #prev { background-position: -160px 0px; }
.toolbar #toc { background-position: -192px 0px; }
.toolbar #next { background-position: -224px 0px; }
.toolbar #settings { background-position: -256px 0px; }
.toolbar #position { color: gray; vertical-align: middle; line-height: 40px; padding-right: 2%; }

.toolbar .right { float: right;}
.toolbar .center { width: 120px; margin: auto;}

@media handheld, only screen and (max-device-width: 480px) {
    header { height: 32px; }
    .toolbar-icon { zoom: 0.8; }
    .toolbar .center { width: 96px; }
    .toolbar #position { line-height: 0px; visibility: hidden; }
}

#main {
    margin: 50px 8% 20px 8%; font-size: 16px; line-height: 1.4; zoom: 1;
    font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
}

#main img { max-width: 92% !important;}

#main p { margin-bottom: 20px;}

#flyleaf-toc { text-align: center; margin-top: 50px; font-size: 14px;}
#flyleaf-toc h1 { color: #222;  margin-bottom: 30px;}
.flyleaf-toc-entry { padding: 5px 0 10px 0; background: url('../img/sep.png') no-repeat bottom center; }
.flyleaf-toc-entry:last-child { background: 0; }











/* ==|== non-semantic helper classes ========================================
   Please define your styles before this section.
   ========================================================================== */

/* For image replacement */
.ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; }
.ir br { display: none; }

/* Hide from both screenreaders and browsers: h5bp.com/u */
.hidden { display: none !important; visibility: hidden; }

/* Hide only visually, but have it available for screenreaders: h5bp.com/v */
.visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }

/* Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard: h5bp.com/p */
.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }

/* Hide visually and from screenreaders, but maintain layout */
.invisible { visibility: hidden; }

/* Contain floats: h5bp.com/q */ 
.clearfix:before, .clearfix:after { content: ""; display: table; }
.clearfix:after { clear: both; }
.clearfix { zoom: 1; }
/* ... */

